# src/controllers/contacts.js
@@ -4,6 +4,8 @@ const getAll = async (req, res) => {
   const contacts = await services.getAll(req.user.id, req.query);
 
   res.json({
+    status: 200,
+    message: "Contacts successfully found",
     data: contacts,
   });
 };
@@ -11,6 +13,8 @@ const getAll = async (req, res) => {
 export const getById = async (req, res) => {
   const contact = await services.getById(req.params.id, req.user.id);
   res.json({
+    status: 200,
+    message: "Contact successfully found",
     data: contact,
   });
 };
@@ -18,6 +22,8 @@ export const getById = async (req, res) => {
 const deleteById = async (req, res) => {
   const contact = await services.deleteById(req.params.id, req.user.id);
   res.json({
+    status: 200,
+    message: "Contact successfully deleted",
     data: contact,
   });
 };
@@ -25,6 +31,8 @@ const deleteById = async (req, res) => {
 const create = async (req, res) => {
   const contact = await services.create(req.user.id, req.body);
   res.status(201).json({
+    status: 201,
+    message: "Contacts successfully created",
     data: contact,
   });
 };
@@ -37,6 +45,8 @@ const updateById = async (req, res) => {
   );
 
   res.status(200).json({
+    status: 200,
+    message: "Contact successfully updated",
     data: contact,
   });
 };
